@@ -12,7 +12,6 @@ import com.linkedin.aspect.GetTimeseriesAspectValuesResponse;
 import com.linkedin.common.AuditStamp;
 import com.linkedin.common.VersionedUrn;
 import com.linkedin.common.urn.Urn;
-import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.DataMap;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.data.template.StringArray;
@@ -24,6 +23,7 @@ import com.linkedin.metadata.aspect.EnvelopedAspect;
 import com.linkedin.metadata.aspect.EnvelopedAspectArray;
 import com.linkedin.metadata.aspect.VersionedAspect;
 import com.linkedin.metadata.aspect.batch.AspectsBatch;
+import com.linkedin.metadata.aspect.batch.BatchItem;
 import com.linkedin.metadata.browse.BrowseResult;
 import com.linkedin.metadata.browse.BrowseResultV2;
 import com.linkedin.metadata.entity.DeleteEntityService;
@@ -48,6 +48,7 @@ import com.linkedin.metadata.search.SearchService;
 import com.linkedin.metadata.search.client.CachingEntitySearchService;
 import com.linkedin.metadata.service.RollbackService;
 import com.linkedin.metadata.timeseries.TimeseriesAspectService;
+import com.linkedin.metadata.utils.AuditStampUtils;
 import com.linkedin.metadata.utils.metrics.MetricUtils;
 import com.linkedin.mxe.MetadataChangeProposal;
 import com.linkedin.mxe.PlatformEvent;
@@ -60,6 +61,8 @@ import io.opentelemetry.extension.annotations.WithSpan;
 import java.net.URISyntaxException;
 import java.time.Clock;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -68,6 +71,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
@@ -372,7 +376,13 @@ public class JavaEntityClient implements EntityClient {
     return ValidationUtils.validateSearchResult(
         opContext,
         entitySearchService.search(
-            opContext, List.of(entity), input, newFilter(requestFilters), null, start, count),
+            opContext,
+            List.of(entity),
+            input,
+            newFilter(requestFilters),
+            Collections.emptyList(),
+            start,
+            count),
         entityService);
   }
 
@@ -403,7 +413,7 @@ public class JavaEntityClient implements EntityClient {
                 opContext.withSearchFlags(flags -> flags.setFulltext(false)),
                 entity,
                 newFilter(requestFilters),
-                null,
+                Collections.emptyList(),
                 start,
                 count)),
         entityService);
@@ -414,7 +424,7 @@ public class JavaEntityClient implements EntityClient {
    *
    * @param input search query
    * @param filter search filters
-   * @param sortCriterion sort criterion
+   * @param sortCriteria sort criteria
    * @param start start offset for search results
    * @param count max number of search results requested
    * @return Snapshot key
@@ -426,14 +436,14 @@ public class JavaEntityClient implements EntityClient {
       @Nonnull String entity,
       @Nonnull String input,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
     return ValidationUtils.validateSearchResult(
         opContext,
         entitySearchService.search(
-            opContext, List.of(entity), input, filter, sortCriterion, start, count),
+            opContext, List.of(entity), input, filter, sortCriteria, start, count),
         entityService);
   }
 
@@ -446,10 +456,10 @@ public class JavaEntityClient implements EntityClient {
       @Nullable Filter filter,
       int start,
       int count,
-      @Nullable SortCriterion sortCriterion)
+      List<SortCriterion> sortCriteria)
       throws RemoteInvocationException {
     return searchAcrossEntities(
-        opContext, entities, input, filter, start, count, sortCriterion, null);
+        opContext, entities, input, filter, start, count, sortCriteria, null);
   }
 
   /**
@@ -461,7 +471,7 @@ public class JavaEntityClient implements EntityClient {
    * @param start start offset for search results
    * @param count max number of search results requested
    * @param facets list of facets we want aggregations for
-   * @param sortCriterion sorting criterion
+   * @param sortCriteria sorting criteria
    * @return Snapshot key
    * @throws RemoteInvocationException when unable to execute request
    */
@@ -473,7 +483,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable Filter filter,
       int start,
       int count,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       @Nullable List<String> facets)
       throws RemoteInvocationException {
 
@@ -484,7 +494,7 @@ public class JavaEntityClient implements EntityClient {
             entities,
             input,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count,
             facets),
@@ -526,7 +536,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable String input,
       @Nullable Integer maxHops,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
@@ -540,7 +550,7 @@ public class JavaEntityClient implements EntityClient {
             input,
             maxHops,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count),
         entityService);
@@ -556,7 +566,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable String input,
       @Nullable Integer maxHops,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       @Nullable String scrollId,
       @Nonnull String keepAlive,
       int count)
@@ -574,7 +584,7 @@ public class JavaEntityClient implements EntityClient {
             input,
             maxHops,
             filter,
-            sortCriterion,
+            sortCriteria,
             scrollId,
             keepAlive,
             count),
@@ -642,7 +652,7 @@ public class JavaEntityClient implements EntityClient {
       @Nonnull OperationContext opContext,
       @Nonnull String entity,
       @Nonnull Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
@@ -652,7 +662,7 @@ public class JavaEntityClient implements EntityClient {
             opContext.withSearchFlags(flags -> flags.setFulltext(true)),
             entity,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count),
         entityService);
@@ -738,35 +748,54 @@ public class JavaEntityClient implements EntityClient {
     return response.getValues();
   }
 
-  // TODO: Factor out ingest logic into a util that can be accessed by the java client and the
-  // resource
   @Override
-  public String ingestProposal(
+  @Nonnull
+  public List<String> batchIngestProposals(
       @Nonnull OperationContext opContext,
-      @Nonnull final MetadataChangeProposal metadataChangeProposal,
-      final boolean async)
-      throws RemoteInvocationException {
+      @Nonnull Collection<MetadataChangeProposal> metadataChangeProposals,
+      boolean async) {
     String actorUrnStr =
         opContext.getSessionAuthentication().getActor() != null
             ? opContext.getSessionAuthentication().getActor().toUrnStr()
             : Constants.UNKNOWN_ACTOR;
-    final AuditStamp auditStamp =
-        new AuditStamp().setTime(_clock.millis()).setActor(UrnUtils.getUrn(actorUrnStr));
+    final AuditStamp auditStamp = AuditStampUtils.createAuditStamp(actorUrnStr);
 
     AspectsBatch batch =
         AspectsBatchImpl.builder()
-            .mcps(
-                List.of(metadataChangeProposal), auditStamp, opContext.getRetrieverContext().get())
+            .mcps(metadataChangeProposals, auditStamp, opContext.getRetrieverContext().get())
             .build();
 
-    Optional<IngestResult> one =
-        entityService.ingestProposal(opContext, batch, async).stream().findFirst();
+    Map<BatchItem, List<IngestResult>> resultMap =
+        entityService.ingestProposal(opContext, batch, async).stream()
+            .collect(Collectors.groupingBy(IngestResult::getRequest));
 
-    Urn urn = one.map(IngestResult::getUrn).orElse(metadataChangeProposal.getEntityUrn());
-    if (one.isPresent()) {
-      tryIndexRunId(opContext, urn, metadataChangeProposal.getSystemMetadata());
-    }
-    return urn.toString();
+    // Update runIds
+    batch.getItems().stream()
+        .filter(resultMap::containsKey)
+        .forEach(
+            requestItem -> {
+              List<IngestResult> results = resultMap.get(requestItem);
+              Optional<Urn> resultUrn =
+                  results.stream().map(IngestResult::getUrn).filter(Objects::nonNull).findFirst();
+              resultUrn.ifPresent(
+                  urn -> tryIndexRunId(opContext, urn, requestItem.getSystemMetadata()));
+            });
+
+    // Preserve ordering
+    return batch.getItems().stream()
+        .map(
+            requestItem -> {
+              if (resultMap.containsKey(requestItem)) {
+                List<IngestResult> results = resultMap.get(requestItem);
+                return results.stream()
+                    .filter(r -> r.getUrn() != null)
+                    .findFirst()
+                    .map(r -> r.getUrn().toString())
+                    .orElse(null);
+              }
+              return null;
+            })
+        .collect(Collectors.toList());
   }
 
   @SneakyThrows
